--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,8 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am your webapp.
+            Karthika Saran
+        <p> Hi! I am Karthika. I am very passionated about application development. This IMAD course is very interesting. Hope this helps everybody to build their own dream applications.</p>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
