--- a/ui/index.html
+++ b/ui/index.html
@@ -10,7 +10,7 @@
         <br>
         <div class="center text-big bold">
             Karthika Saran
-        <p> Hi! I am Karthika. I am very passionate about programming and application development is an area where I am inclined to. This IMAD course is very interesting. Hope this helps everybody to build their own dream applications.</p>
+        <p> Hi! I am Karthika. <br> I am very passionate about programming and application development is an area where I am inclined to. <br> This IMAD course is very interesting. Hope this helps everybody to build their own dream applications.<br></p>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
