--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,33 @@
+<!DOCTYPE html>
 <html>
+    <head>
+        <title>
+            Article-One By Karthika
+        </title>
+    </head>
+    <body>
+        <div>
+            <a href="/">"Home"</a>
+        </div>
+        <hr>
+        <div>
+            Bangalore <br>
+            August 2,2017
+        </div>
+        <div>
+            <h3> Numbers </h3>
+            <ol>
+                <li> One </li>
+                <li> Two </li>
+                <li> Three </li>
+                <li> Four </li>
+                <li> Five </li>
+                <li> Six </li>
+                <li> Seven </li>
+                <li> Eight </li>
+                <li> Nine </li>
+                <li> Ten </li>
+            </ol>
+        </div>
+    </body>
 </html>
