[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -1,2 +1,29 @@
+<!DOCTYPE html>
 <html>
+    <head>
+        <title>
+            Article-Two By Karthika
+        </title>
+    </head>
+    <body>
+        <div>
+            <a href="/">Home</a>
+        </div>
+        <hr>
+        <div>
+            Bangalore <br>
+            August 2,2017
+        </div>
+        <div>
+            <h3> India </h3>
+            <p> India is my country. It is rich in wealth , natural resources and human resources. It's ancient tradition is noteworthy. </p>
+            <ul>
+                <li> National Flower : Lotus</li>
+                <li> National Animal : Tiger</li>
+                <li> National Bird : Peacock</li>
+                <li> National Anthem : Jana Gana Mana</li>
+                <li> National Flag : Tricoloured with chakra in between</li>
+            </ul>
+        </div>
+    </body>
 </html>
