[imad-console] Updates ui/article-three.html

--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -1,2 +1,26 @@
+<!DOCTYPE html>
 <html>
+    <head>
+        <title>
+            Article-Three By Karthika
+        </title>
+    </head>
+    <body>
+        <div>
+            <a href="/">Home</a>
+        </div>
+        <hr>
+        <div>
+            Bangalore <br>
+            August 2,2017
+        </div>
+        <div>
+            <h3> Computer </h3>
+            <p>What is a computer? </p>
+            <p> A computer is an electronic device which takes an input, processes it and renders the output.</p>
+            <p> The computer is very fast and it replaces the boring and tiring mundane tasks</p>
+            <p> Computers made our lives much easier</p>
+            
+        </div>
+    </body>
 </html>
