--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,30 +4,33 @@
         <title>
             Article-One By Karthika
         </title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-        <div>
-            <a href="/">Home</a>
-        </div>
-        <hr>
-        <div>
-            Bangalore <br>
-            August 2,2017
-        </div>
-        <div>
-            <h3> Numbers </h3>
-            <ol>
-                <li> One </li>
-                <li> Two </li>
-                <li> Three </li>
-                <li> Four </li>
-                <li> Five </li>
-                <li> Six </li>
-                <li> Seven </li>
-                <li> Eight </li>
-                <li> Nine </li>
-                <li> Ten </li>
-            </ol>
+        <div class="container">
+            <div>
+                <a href="/">Home</a>
+            </div>
+            <hr>
+            <div>
+                Bangalore <br>
+                August 2,2017
+            </div>
+            <div>
+                <h3> Numbers </h3>
+                <ol>
+                    <li> One </li>
+                    <li> Two </li>
+                    <li> Three </li>
+                    <li> Four </li>
+                    <li> Five </li>
+                    <li> Six </li>
+                    <li> Seven </li>
+                    <li> Eight </li>
+                    <li> Nine </li>
+                    <li> Ten </li>
+                </ol>
+            </div>
         </div>
     </body>
 </html>
