--- a/ui/index.html
+++ b/ui/index.html
@@ -12,6 +12,7 @@
             Karthika Saran
         <p> Hi! I am Karthika. <br> I am very passionate about programming and application development is an area where I am inclined to. <br> This IMAD course is very interesting. Hope this helps everybody to build their own dream applications!!<br></p>
         </div>
+        <script> alert("HI")</script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
