[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -8,7 +8,7 @@
             <img src="/ui/profile.png" class="img-medium"/>
         </div>
         <br>
-        <div class="center text-big bold">
+        <div id="text" class="center text-big bold">
             Karthika Saran
         <p> Hi! I am Karthika. <br> I am very passionate about programming and application development is an area where I am inclined to. <br> This IMAD course is very interesting. Hope this helps everybody to build their own dream applications!!<br></p>
         </div>
