[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,15 +4,15 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
-            <img id="img1" src="/ui/profile.png" class="img-medium"/>
+        <div id="img1" class="center">
+            <img src="/ui/profile.png" class="img-medium"/>
         </div>
         <br>
         <div id="textq" class="center text-big bold">
             Karthika Saran
         <p> Hi! I am Karthika. <br> I am very passionate about programming and application development is an area where I am inclined to. <br> This IMAD course is very interesting. Hope this helps everybody to build their own dream applications!!<br></p>
         </div>
-        <script> alert("HI")</script>
+        
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
