--- a/ui/index.html
+++ b/ui/index.html
@@ -4,8 +4,8 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div id="img1" class="center">
-            <img src="/ui/profile.png" class="img-medium"/>
+        <div  class="center">
+            <img id="img1" src="/ui/profile.png" class="img-medium"/>
         </div>
         <br>
         <div id="textq" class="center text-big bold">
