--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div  class="center">
-            <img  src="/ui/profile.png" id="img1" class="img-medium"/>
+            <img  src="/ui/profile.png"  class="img-medium" id="img1"/>
         </div>
         <br>
         <div id="textq" class="center text-big bold">
