--- a/ui/index.html
+++ b/ui/index.html
@@ -4,15 +4,18 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div  class="center">
-            <img  src="/ui/profile.png"  class="img-medium" id="img1"/>
+        <div class="container">
+            <div  class="center">
+                <img  src="/ui/profile.png"  class="img-medium" id="img1"/>
+            </div>
+            <br>
+            <div >
+               <h4>  Karthika Saran </h4> <hr>
+            <p> Hi! I am Karthika. <br> I am very passionate about programming and application development is an area where I am inclined to. <br> This IMAD course is very interesting. Hope this helps everybody to build their own dream applications!!<br></p> <hr>
+            </div>
         </div>
-        <br>
-        <div id="textq" class="center text-big bold">
-            Karthika Saran
-        <p> Hi! I am Karthika. <br> I am very passionate about programming and application development is an area where I am inclined to. <br> This IMAD course is very interesting. Hope this helps everybody to build their own dream applications!!<br></p>
+        <div> This button <button id="counter" >"Click Me" </button> has been clicked <span id="count"> 0 </span> times
         </div>
-        
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
