[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -14,7 +14,7 @@
             <p> Hi! I am Karthika. <br> I am very passionate about programming and application development is an area where I am inclined to. <br> This IMAD course is very interesting. Hope this helps everybody to build their own dream applications!!<br></p> <hr>
             </div>
         
-            <div> This button <button id="counter" >"Click Me" </button> has been clicked <span id="count"> 0 </span> times
+            <div> This button <button id="counter" >Click Me</button> has been clicked <span id="count">0</span> times
             </div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
