--- a/ui/index.html
+++ b/ui/index.html
@@ -16,6 +16,10 @@
         
             <div> This button <button id="counter" >Click Me</button> has been clicked <span id="count">0</span> times
             </div>
+            <hr>
+            <input type="text" id="name" paceholder="name"/>
+            <button id="submit">Click</button>
+            <ul id="namelist"> </ul>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
