--- a/ui/index.html
+++ b/ui/index.html
@@ -20,6 +20,16 @@
             <input type="text" id="name" paceholder="name"/>
             <button id="submit">Click</button>
             <ul id="namelist"> </ul>
+            <hr>
+			<div style.height:5000px>
+				<h4> Comments </h4> <hr>
+				<ul id="comm_list">
+				</ul>
+			</div>
+			<div>
+				<input type="text" id="comm" placeholder="Type your comments here"/>
+				<button id="comment"> Post </button>
+			</div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
