[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -21,7 +21,7 @@
             <button id="submit">Click</button>
             <ul id="namelist"> </ul>
             <hr>
-			<div style.height:5000px>
+			<div>
 				<h4> Comments </h4> <hr>
 				<ul id="comm_list">
 				</ul>
