[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -17,15 +17,18 @@
             <div> This button <button id="counter" >Click Me</button> has been clicked <span id="count">0</span> times
             </div>
             <hr>
-            <input type="text" id="name" paceholder="name"/>
-            <button id="submit">Click</button>
-            <ul id="namelist"> </ul>
+            <div>
+                <input type="text" id="name" paceholder="name"/>
+                <button id="submit">Click</button>
+                <ul id="namelist"> </ul>
+            </div>
             <hr>
 			<div>
 				<h4> Comments </h4> <hr>
 				<ul id="comm_list">
 				</ul>
 			</div>
+			<hr>
 			<div>
 				<input type="text" id="comm" placeholder="Type your comments here"/>
 				<button id="comment"> Post </button>
