--- a/ui/index.html
+++ b/ui/index.html
@@ -23,7 +23,11 @@
                 <ul id="namelist"> </ul>
             </div>
             <hr>
-			
+			<div>
+			    <input type="text" id="username" placeholder="username"/>
+			    <input type="password" id="password"/>
+			    <button id="login">Login</button>
+			</div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
