[imad-console] Updates ui/registration.html

--- a/ui/registration.html
+++ b/ui/registration.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <html>
 <head>
 <title>
@@ -21,7 +22,8 @@ Registration Page
 <p>Confirm Password:</p>
 <input id="confirmpassword" type="password" placeholder="reenter password"/>
 </div>
-<div>
+<hr>
+<div style="align:center">
 <button id="submit"> Submit </button>
 </div>
 </body>
