--- a/ui/index.html
+++ b/ui/index.html
@@ -27,7 +27,10 @@
 			    <input type="text" id="username" placeholder="username"/>
 			    <input type="password" id="password"/>
 			    <button id="login">Login</button>
+			    <button id="signup">Signup</button>
 			</div>
+			<hr>
+			
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
