[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -27,7 +27,7 @@
 			    <input type="text" id="username" placeholder="username"/>
 			    <input type="password" id="password"/>
 			    <button id="login">Login</button>
-			    <button id="signup" onclick="location.href = 'http://karthikaraghavendrar7.imad.hasura-app.io/registration'">Signup</button>
+			    <button id="signup" onclick="window.location.href = 'http://karthikaraghavendrar7.imad.hasura-app.io/registration'">Signup</button>
 			</div>
 			<hr>
 			
