[imad-console] Updates ui/registration.html

--- a/ui/registration.html
+++ b/ui/registration.html
@@ -24,7 +24,7 @@ Registration Page
 </div>
 <hr>
 <div style="align:center">
-<button id="submit"> Submit </button>
+<button id="submitdb"> Submit </button>
 </div>
 </body>
 </html>
