--- a/ui/registration.html
+++ b/ui/registration.html
@@ -26,5 +26,7 @@ Registration Page
 <div style="align:center">
 <button id="submitdb"> Submit </button>
 </div>
+<script type="text/javascript" src="/ui/main.js">
+        </script>
 </body>
 </html>
