--- a/ui/registration.html
+++ b/ui/registration.html
@@ -26,7 +26,7 @@ Registration Page
 <div style="align:center">
 <button id="submitdb"> Submit </button>
 </div>
-<script type="text/javascript" src="/ui/main.js">
+<script type="text/javascript" src="/ui/regjs.js">
         </script>
 </body>
 </html>
