[imad-console] Updates ui/welcome.html

--- a/ui/welcome.html
+++ b/ui/welcome.html
@@ -1,4 +1,15 @@
 <html>
 <head>
+    <title>
+        Welcome
+    </title>
 </head>
+<body>
+    <div>
+    <button style="align:left" id="signout">Signout</button>
+    </div>
+    <div>
+        <h3>Welcome  <span id="user"> </span></h3>
+    </div>
+</body>
 </html>
