[imad-console] Updates ui/welcome.html

--- a/ui/welcome.html
+++ b/ui/welcome.html
@@ -11,5 +11,7 @@
     <div>
         <h3>Welcome  <span id="user"> </span></h3>
     </div>
+ <script type="text/javascript" src="/ui/welcomejs.js">
+        </script>
 </body>
 </html>
